--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <br><br><br><br><br><br><br>
 
 <h1 style="text-align:center">Deepak Sharma - 7888933246</u></b></h1>
-Minakshi
+<h1 style="text-align:center; text-color:red; background-color:cyan"><b>Minakshi  &  Manya</b></h1>
 </body>
 </html>
