--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <title>MademiTech</title>
 <body style="background-color:Orange;">
 	<h1 style="background-color:red; text-align:center">MADEMI TECH </h1>
-	<h1 style="background-color:red; text-align:center">LINUX, AWS, DEVOPS, OPENSTACK </h1><br><br><br><br><br><br>
+	<h1 style="background-color:red; text-align:center">LINUX, AWS, DEVOPS, OPENSTACK </h1>
 	<h1 style="text-align:center"><b><u>HTTPS://WWW.YOUTUBE.COM/C/MADEMITECH</u></b></h1>
 	<h1 style="text-align:center"><marquee>Kindly Subscribe, like and share my YOUTUBE channel { MADEMI TECH } </marquee> </h1>
-<br><br><br><br><br><br><br>
 
-<h1 style="text-align:center">Deepak Sharma - 7888933246</u></b></h1>
+<h1 style="text-align:center"><img src="deepak.jpg" width="300" height="300"></h1>
+<h1 style="text-align:center; text-color:yellow; background-color:blue">Deepak Sharma - 7888933246</u></b></h1>
 <h1 style="text-align:center; text-color:red; background-color:cyan"><b>Minakshi  &  Manya</b></h1>
 </body>
 </html>
