--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1 style="text-align:center"><marquee>Kindly Subscribe, like and share my YOUTUBE channel { MADEMI TECH } </marquee> </h1>
 
 <h1 style="text-align:center"><img src="deepak.jpg" width="300" height="300"></h1>
-<h1 style="text-align:center; text-color:white; background-color:black">Deepak Sharma - 7888933246</u></b></h1>
+<h1 style="text-align:center; text-color:pink; background-color:black">Deepak Sharma - 7888933246</u></b></h1>
 <h1 style="text-align:center; text-color:red; background-color:cyan"><b>-: Minakshi  &  Manya :-</b></h1>
 </body>
 </html>
