--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body style="background-color:Orange;">
 	<h1 style="background-color:red; text-align:center">MADEMI TECH </h1>
 	<h1 style="background-color:red; text-align:center">LINUX, AWS, DEVOPS, OPENSTACK </h1>
-	<h1 style="text-align:center"><b><u><a href:"https:www.youtube.com/c/mademitech>HTTPS://WWW.YOUTUBE.COM/C/MADEMITECH</b></h1>
+	<h1 style="text-align:center"><b><a href:"https:www.youtube.com/c/mademitech>HTTPS://WWW.YOUTUBE.COM/C/MADEMITECH<a></b></h1>
 	<h1 style="text-align:center"><marquee>Kindly Subscribe, like and share my YOUTUBE channel { MADEMI TECH } </marquee> </h1>
 
 <h1 style="text-align:center"><img src="deepak.jpg" width="300" height="300"></h1>
