--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<h1 style="text-align:center"><marquee>Kindly Subscribe, like and share my YOUTUBE channel { MADEMI TECH } </marquee> </h1>
 
 <h1 style="text-align:center"><img src="deepak.jpg" width="300" height="300"></h1>
-<h1 style="text-align:center; background-color:blue; color:pink"><b>Deepak Sharma - 7888933246</b></h1>
+<h1 style="text-align:center; background-color:blue; color:pink"><b>Deepak Sharma - 9418174240
+</b></h1>
 <h1 style="text-align:center; color:red; background-color:cyan"><b>-: Minakshi  &  Manya :-</b></h1>
 </body>
 </html>
